removed .json from endpoints
